fix: restrict SyntaxUtils.isDigits to ASCII digits only (#12)
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: nyg <784863+nyg@users.noreply.github.com>